<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pt.ipp.isep.dei.lei.lapr3</groupId>
    <artifactId>lapr3-db-access-example</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>lapr3-db-access-example</name>
    <packaging>jar</packaging>

    <properties>

        <junit.jupiter>5.8.1</junit.jupiter>

        <maven.surefire.plugin>3.2.5</maven.surefire.plugin>
        <maven.compiler.plugin>3.8.1</maven.compiler.plugin>

        <java.version>1.8</java.version>
        <project.sourceEncoding>UTF-8</project.sourceEncoding>

        <project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.sourceEncoding}</project.reporting.outputEncoding>

        <mainClass>MainBDDAD</mainClass>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <pitest.maven>1.7.2</pitest.maven>
        <pitest.junit5.plugin>1.2.1</pitest.junit5.plugin>
        <junit.platform.surefire.provider>1.3.2</junit.platform.surefire.provider>

        <jacoco.maven.plugin>0.8.7</jacoco.maven.plugin>
        <jacoco.maven.plugin>0.8.7</jacoco.maven.plugin>


    </properties>

    <build>
        <plugins>
            <plugin><!-- Compiler configuration-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>

                    <showWarnings>true</showWarnings>   <!-- Needs this -->

                    <compilerArgs>--enable-preview   <!-- recommended -->
                    </compilerArgs>

                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>unpack-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <excludeScope>system</excludeScope>
                            <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Required for running unit tests -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin}</version>
                <configuration>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <excludes>
                        <exclude>**MainBDDAD**</exclude>
                    </excludes>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <!-- Required for generating coverage report -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven.plugin}</version>
                <configuration>
                    <excludes>
                        <exclude>**/UI/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>

            <!-- Required for generating PIT Mutation reports -->
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest.maven}</version>
                <configuration>
                    <!--<timestampedReports>false</timestampedReports>-->
                    <!--<inScopeClasses>
                        <param>lapr.project.Model.*</param>
                        <param>lapr.project.Utils.*</param>
                    </inScopeClasses>-->
                    <targetClasses>
                        <!-- Example: <param>lapr.project.Model.*</param> -->
                        <param>Model.*</param>
                    </targetClasses>

                    <targetTests>
                        <!-- Example: <param>lapr.project.Utils.*</param> -->
                        <param>Model.*</param>
                        <param>Demo.*</param>
                    </targetTests>

                    <outputFormats>
                        <outputFormat>XML</outputFormat>
                        <outputFormat>HTML</outputFormat>
                    </outputFormats>
                    <!--<verbose>true</verbose>-->
                </configuration>

            </plugin>

        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>19.8.0.0</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>4.1.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>